<resources>
    <string name="app_name">Exercise 2</string>
    <string name="quantity_range">1-99</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="orange">Orange</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="quantity">Quantity</string>
    <string name="fruits">Fruits</string>
    <string name="close">Close</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="invalid_quantity">Invalid quantity</string>
    <string name="invalid_fruits">Invald Fruits</string>
</resources>